[project]
name = "ark-disasm-mcp"
version = "1.0.0"
description = "MCP server for disassembling ABC bytecode to PA text using ark_disasm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
ark-disasm-mcp = "ark_disasm_mcp:__main__"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
