[project]
name = "es2abc-mcp"
version = "1.0.0"
description = "MCP server for compiling JavaScript to ABC bytecode using es2abc"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
es2abc-mcp = "es2abc_mcp:__main__"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
