[project]
name = "harmony-build-mcp"
version = "1.0.0"
description = "MCP server for building HarmonyOS projects using hvigorw"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
harmony-build-mcp = "harmony_build_mcp:__main__"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
